[workspace]

members = [
    "bin/server",
    "lib/parachain-client",
    "lib/solver",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
blake2b_simd = "1.0.1"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
digest = "0.10.6"
env_logger = "0.10"
futures = "0.3"
good_lp = "1" 
jsonrpsee = { version = "0.16.2", features = ["ws-client"] }
log = "0.4.17"
serde = "1"
serde_json = "1"
tokio = "1"
twox-hash = "1.6.3"
uuid = "1"