[package]
name = "parachain-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
jsonrpsee = { workspace = true }
serde = { workspace = true }
sp-keyring = { workspace = true, default-features = false }
subxt = { workspace = true }