[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
good_lp = { workspace = true, features = ["lp-solvers"], default-features = false }
log = { workspace = true }
parachain-client = { path = "../parachain-client" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = "0.10.0"
test-log = "0.2.8"